--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+    <p>Helle</p>
+    <aside class="sidebar">
 
+    </aside>
 </body>
 </html>
