Add file reset and several styles

--- a/app/index.html
+++ b/app/index.html
@@ -2,12 +2,14 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="app/css/main.min.css" type="text/css"/>
     <title>Title</title>
 </head>
 <body>
+    <header class="header"></header>
     <p>Helle</p>
     <aside class="sidebar">
-
+        sidebar
     </aside>
 </body>
 </html>
